[gd_scene load_steps=2 format=3 uid="uid://d2cqtawforqvn"]

[ext_resource type="Script" path="res://Worlds/Voxeland/VoxelVillage/SavePanel/SavePanel.gd" id="1_y71dd"]

[node name="SavePanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y71dd")

[node name="BG" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.505882, 0.329412, 1, 0.384314)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
offset_right = 1280.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 26
text = "Save"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
offset_top = 43.0
offset_right = 1280.0
offset_bottom = 720.0
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer"]
offset_left = 15.0
offset_right = 1265.0
offset_bottom = 662.0

[node name="HFlowContainer" type="HFlowContainer" parent="VBoxContainer/MarginContainer/ScrollContainer"]
offset_right = 1250.0
offset_bottom = 662.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddNew" type="ColorRect" parent="VBoxContainer/MarginContainer/ScrollContainer/HFlowContainer"]
custom_minimum_size = Vector2i(100, 100)
offset_right = 100.0
offset_bottom = 100.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PlusH" type="ColorRect" parent="VBoxContainer/MarginContainer/ScrollContainer/HFlowContainer/AddNew"]
custom_minimum_size = Vector2i(80, 20)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -10.0
offset_right = 40.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
color = Color(0.533333, 0.533333, 0.533333, 1)

[node name="PlusV" type="ColorRect" parent="VBoxContainer/MarginContainer/ScrollContainer/HFlowContainer/AddNew"]
custom_minimum_size = Vector2i(20, 80)
offset_left = 40.0
offset_top = 10.0
offset_right = 60.0
offset_bottom = 90.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
color = Color(0.533333, 0.533333, 0.533333, 1)

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer/ScrollContainer/HFlowContainer"]
custom_minimum_size = Vector2i(100, 100)
offset_left = 104.0
offset_right = 204.0
offset_bottom = 100.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SaveButton" type="Button" parent="VBoxContainer"]
visible = false
offset_left = 618.0
offset_top = 689.0
offset_right = 662.0
offset_bottom = 720.0
size_flags_horizontal = 4
text = "Save"

[node name="DeleteSlot" type="Button" parent="VBoxContainer"]
visible = false
offset_left = 594.0
offset_top = 689.0
offset_right = 686.0
offset_bottom = 720.0
size_flags_horizontal = 4
text = "Delete Slot"

[connection signal="gui_input" from="." to="." method="_on_save_panel_gui_input"]
[connection signal="gui_input" from="VBoxContainer/MarginContainer/ScrollContainer/HFlowContainer/AddNew" to="." method="_on_add_new_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/MarginContainer/ScrollContainer/HFlowContainer/AddNew" to="." method="_on_add_new_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/MarginContainer/ScrollContainer/HFlowContainer/AddNew" to="." method="_on_add_new_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
